--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,7 +4,7 @@ $violet-purple: #8f4bbf;
 $mint-woods: #179880; 
 
 .hidden {
-    visibility: hidden;
+    display: none;
     width: 0px;
     height: 0px;
 }
