--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,3 +8,14 @@ $mint-woods: #179880;
     width: 0px;
     height: 0px;
 }
+
+.screen-reader-only {
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+}
