--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,15 +14,19 @@ body {
   background: #232323;
 }
 
-.screen-reader-only {
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
+.heading,
+.heading-two {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.white-font {
+  color: #F1EFE9;
+}
+
+.list {
+  padding-bottom: 10px;
+  list-style: none;
 }
 
 .login-section {
@@ -48,22 +52,160 @@ body {
   background-color: #F1EFE9;
   opacity: 2;
   border: 0.2rem solid #232323;
-}
-
-.heading {
-  padding-bottom: 0.75rem;
-  text-align: center;
+  border-radius: 20px;
 }
 
 .login-description {
-  padding-bottom: 0.75rem;
+  padding-bottom: 5px;
 }
 
 .login-name-input,
 .password-input {
-  margin-bottom: 0.6rem;
+  margin-bottom: 8px;
   padding: 10px;
   border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+
+.login-submit-btn {
+  width: 100%;
+  padding: 4px;
+  font-weight: bolder;
+  border: 0.07rem solid #232323;
+  border-radius: 20px;
+  background: none;
+}
+.login-submit-btn:hover {
+  cursor: pointer;
+  background: #A09D00;
+  border: 0.07rem solid #A09D00;
+}
+
+.nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 85px;
+  background: #34526E;
+}
+
+.nav-btn {
+  margin-top: 20px;
+  margin-left: 40px;
+  padding: 10px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 20px;
+  font-size: larger;
+  font-weight: lighter;
+  color: #F1EFE9;
+}
+.nav-btn:hover {
+  cursor: pointer;
+  background-color: #F1EFE9;
+  border: 0.07rem solid #F1EFE9;
+  color: #232323;
+}
+
+.dashboard-section-customer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80vw;
+  max-width: 800px;
+}
+
+.customer-dash-heading {
+  margin-top: 250px;
+}
+
+.bookings-section {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  width: 100%;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  background: #F1EFE9;
+}
+
+.booking-detail-btn {
+  padding: 10px;
+  margin: 5px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+.booking-detail-btn:hover {
+  cursor: pointer;
+  background: #A09D00;
+  border: 0.07rem solid #A09D00;
+}
+
+.total-spent-section {
+  width: 100%;
+  text-align: center;
+  background: #A09D00;
+  margin-bottom: 7vh;
+  padding: 10px;
+  font-size: large;
+  border-radius: 20px;
+}
+
+.amount-spent {
+  font-size: larger;
+}
+
+.room-display-wrapper {
+  width: 50vw;
+  padding: 40px;
+  background: #F1EFE9;
+  border-radius: 20px;
+}
+
+.information {
+  padding-bottom: 10px;
+}
+
+.cancel-btn {
+  padding: 5px 20px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 20px;
+}
+.cancel-btn:hover {
+  cursor: pointer;
+  color: #232323;
+  background: #A09D00;
+  border: 0.07rem solid #A09D00;
+}
+
+.book-room-section-customer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80vw;
+  padding: 30px;
+  margin-bottom: 10vh;
+  max-width: 800px;
+  background: #A09D00;
+  border-radius: 20px;
+}
+
+.find-btn {
+  padding: 5px 8px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 20px;
+}
+.find-btn:hover {
+  cursor: pointer;
+  background: #F1EFE9;
+  border: 0.07rem solid #F1EFE9;
 }
 
 .hidden {
@@ -72,17 +214,15 @@ body {
   height: 0px;
 }
 
-.login-submit-btn {
-  width: 100%;
-  padding: 4px;
-  font-weight: bolder;
-  border: 0.07rem solid #232323;
-  background: none;
-}
-.login-submit-btn:hover {
-  cursor: pointer;
-  background: #A09D00;
-  border: 0.07rem solid #A09D00;
+.screen-reader-only {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
 }
 
 /*# sourceMappingURL=style.css.map */
