--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,7 @@ body {
   background-image: url(/src/images/login-background.png);
   background-repeat: no-repeat;
   background-size: 90vh;
+  border-radius: 20px;
 }
 
 .login-wrapper {
@@ -113,12 +114,40 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80vw;
-  max-width: 800px;
+  width: 50vw;
+}
+
+.customer-heading-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+  margin: 490px 0px 40px 0px;
+  padding: 20px;
+  background-image: url(/src/images/banner.png);
+  background-repeat: no-repeat;
+  border-radius: 20px;
 }
 
 .customer-dash-heading {
-  margin-top: 250px;
+  margin-bottom: 60px;
+  padding: 10px;
+  background-color: #F1EFE9;
+  color: #232323;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+
+.booking-heading {
+  width: 100%;
+  margin-bottom: 0px;
+  padding: 10px 20px;
+  background-color: #A09D00;
+  color: #F1EFE9;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .bookings-section {
@@ -128,7 +157,8 @@ body {
   width: 100%;
   margin-bottom: 30px;
   padding: 20px;
-  border-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   background: #F1EFE9;
 }
 
