--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100vh;
   background: #232323;
 }
@@ -33,9 +32,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 90vh;
   height: 90vh;
+  margin-top: 40px;
   background-image: url(/src/images/login-background.png);
   background-repeat: no-repeat;
   background-size: 90vh;
@@ -46,8 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 25vh;
+  margin-top: 8vh;
   width: 50vh;
   height: 50vh;
   background-color: #F1EFE9;
@@ -56,8 +54,12 @@ body {
   border-radius: 20px;
 }
 
+.login-heading {
+  margin-top: 7vh;
+}
+
 .login-description {
-  padding-bottom: 5px;
+  padding-bottom: 10px;
 }
 
 .login-name-input,
@@ -113,7 +115,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 50vw;
 }
 
@@ -121,10 +122,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 150px;
-  margin: 490px 0px 40px 0px;
+  margin: 100px 0px 40px 0px;
   padding: 20px;
   background-image: url(/src/images/banner.png);
   background-repeat: no-repeat;
@@ -192,6 +192,7 @@ body {
 .room-display-wrapper {
   width: 50vw;
   padding: 40px;
+  margin-top: 150px;
   background: #F1EFE9;
   border-radius: 20px;
 }
@@ -217,16 +218,47 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 80vw;
-  padding: 30px;
-  margin-bottom: 10vh;
-  max-width: 800px;
-  background: #A09D00;
+}
+
+.find-room-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60vh;
+  height: 60vh;
+  margin-top: 130px;
+  background-image: url(/src/images/login-background.png);
+  background-repeat: no-repeat;
+  background-size: 60vh;
   border-radius: 20px;
 }
 
+.find-room-heading {
+  width: 80%;
+  margin: 30px 0px 0px 0px;
+  padding: 30px 10px 10px 10px;
+  background: #232323;
+  color: #F1EFE9;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.pick-date-info,
+.room-picker {
+  width: 80%;
+  margin: 0px;
+  padding: 10px;
+  background: #F1EFE9;
+}
+
+.room-picker {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
 .find-btn {
+  align-self: flex-end;
+  margin-left: 20px;
   padding: 5px 8px;
   background: none;
   border: 0.07rem solid #232323;
@@ -234,8 +266,20 @@ body {
 }
 .find-btn:hover {
   cursor: pointer;
-  background: #F1EFE9;
-  border: 0.07rem solid #F1EFE9;
+  background: #A09D00;
+  border: 0.07rem solid #A09D00;
+}
+
+.availible-room-section {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto;
+  background: #A09D00;
+}
+
+.availible-room-heading {
+  margin-top: 100px;
 }
 
 .hidden {
