--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,14 +6,14 @@ $thick-border: .2rem solid $black;
 $thin-border: .07rem solid $black;
 $woods-border: .07rem solid $woods;
 $grey-white-border: .07rem solid $grey-white;
+$blue-border: .07rem solid $blue;
 $round-corners-large: 20px;
 $round-corner-small: 10px;
 
-@mixin flex($flexDirection: column, $alignItems: center, $justifyContent: center) {
+@mixin flex($flexDirection: column, $alignItems: center) {
     display: flex;
     flex-direction: $flexDirection;
     align-items: $alignItems;
-    justify-content: $justifyContent;
 }
 
 body,
@@ -50,6 +50,7 @@ body {
     @include flex;
     width: 90vh;
     height: 90vh;
+    margin-top: 40px;
     background-image: url(/src/images/login-background.png);
     background-repeat: no-repeat;
     background-size: 90vh; 
@@ -58,7 +59,7 @@ body {
 
 .login-wrapper {
     @include flex;
-    margin-bottom: 25vh;
+    margin-top: 8vh;
     width: 50vh;
     height: 50vh;
     background-color: $grey-white;
@@ -67,8 +68,12 @@ body {
     border-radius: $round-corners-large;
 }
 
+.login-heading {
+    margin-top: 7vh;
+}
+
 .login-description {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
 
 .login-name-input,
@@ -132,7 +137,7 @@ body {
     @include flex;
     width: 100%;
     height: 150px;
-    margin: 490px 0px 40px 0px;
+    margin: 100px 0px 40px 0px;
     padding: 20px;
     background-image: url(/src/images/banner.png);
     background-repeat: no-repeat;
@@ -201,6 +206,7 @@ body {
 .room-display-wrapper {
     width: 50vw;
     padding: 40px;
+    margin-top: 150px;
     background: $grey-white;
     border-radius: $round-corners-large;
 }
@@ -225,24 +231,66 @@ body {
 // CUSTOMER BOOKING
 .book-room-section-customer {
     @include flex;
-    width: 80vw;
-    padding: 30px;
-    margin-bottom: 10vh;
-    max-width: 800px;
-    background: $woods;
+}
+
+.find-room-wrapper {
+    @include flex;
+    width: 60vh;
+    height: 60vh;
+    margin-top: 130px;
+    background-image: url(/src/images/login-background.png);
+    background-repeat: no-repeat;
+    background-size: 60vh;
     border-radius: $round-corners-large;
 }
 
+.find-room-heading {
+    width: 80%;
+    margin: 30px 0px 0px 0px;
+    padding: 30px 10px 10px 10px;
+    background: $black;
+    color: $grey-white;
+    border-top-left-radius: $round-corners-large;
+    border-top-right-radius: $round-corners-large;
+}
+.pick-date-info,
+.room-picker {
+    width: 80%;
+    margin: 0px;
+    padding: 10px;
+    background: $grey-white;
+}
+
+.room-picker {
+    border-bottom-left-radius: $round-corners-large;
+    border-bottom-right-radius: $round-corners-large;
+}
+
 .find-btn {
+    align-self: flex-end;
+    margin-left: 20px;
     padding: 5px 8px;
     background: none;
     border: $thin-border;
     border-radius: $round-corners-large;
     &:hover {
         cursor: pointer;
-        background: $grey-white;
-        border: $grey-white-border;
+        background: $woods;
+        border: $woods-border;
     }
+}
+
+// DISPLAY AVAILIBLE ROOMS
+.availible-room-section {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
+    background: $woods;
+}
+
+.availible-room-heading {
+    margin-top: 100px;
 }
 
 // UTILITY STYLES
