--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,7 +256,8 @@ body {
   border-bottom-right-radius: 20px;
 }
 
-.find-btn {
+.find-btn,
+.search-btn-filter {
   align-self: flex-end;
   margin-left: 20px;
   padding: 5px 8px;
@@ -264,7 +265,8 @@ body {
   border: 0.07rem solid #232323;
   border-radius: 20px;
 }
-.find-btn:hover {
+.find-btn:hover,
+.search-btn-filter:hover {
   cursor: pointer;
   background: #A09D00;
   border: 0.07rem solid #A09D00;
@@ -272,14 +274,54 @@ body {
 
 .availible-room-section {
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto;
+  grid-gap: 5px;
+  padding: 5px;
   background: #A09D00;
 }
 
 .availible-room-heading {
+  width: 100%;
   margin-top: 100px;
+  margin-bottom: 0px;
+  padding: 5px 5px;
+  background-color: #F1EFE9;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.form-filter {
+  width: 100%;
+  background: #F1EFE9;
+  padding: 10px 5px;
+}
+
+.room-wrapper {
+  background: #F1EFE9;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+
+.room-filter-info {
+  padding: 0px 3px 3px 3px;
+}
+
+.book-btn {
+  margin-left: 3px;
+  margin-bottom: 3px;
+  padding: 5px 8px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+.book-btn:hover {
+  cursor: pointer;
+  background: #34526E;
+  color: #F1EFE9;
+  border: 0.07rem solid #34526E;
 }
 
 .hidden {
