--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,6 +160,7 @@ body {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   background: #F1EFE9;
+  overflow: scroll;
 }
 
 .booking-detail-btn {
@@ -189,7 +190,9 @@ body {
   font-size: larger;
 }
 
-.room-display-wrapper {
+.room-display-wrapper,
+.confirm-booking-customer,
+.status-msg-wrapper {
   width: 50vw;
   padding: 40px;
   margin-top: 150px;
@@ -197,17 +200,23 @@ body {
   border-radius: 20px;
 }
 
+.status-msg-wrapper {
+  text-align: center;
+}
+
 .information {
   padding-bottom: 10px;
 }
 
-.cancel-btn {
+.cancel-btn,
+.confirm-btn {
   padding: 5px 20px;
   background: none;
   border: 0.07rem solid #232323;
   border-radius: 20px;
 }
-.cancel-btn:hover {
+.cancel-btn:hover,
+.confirm-btn:hover {
   cursor: pointer;
   color: #232323;
   background: #A09D00;
@@ -220,7 +229,8 @@ body {
   align-items: center;
 }
 
-.find-room-wrapper {
+.find-room-wrapper,
+.book-for-customer-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -257,16 +267,16 @@ body {
 }
 
 .find-btn,
-.search-btn-filter {
-  align-self: flex-end;
-  margin-left: 20px;
+.search-btn-filter,
+.search-btn {
   padding: 5px 8px;
   background: none;
   border: 0.07rem solid #232323;
   border-radius: 20px;
 }
 .find-btn:hover,
-.search-btn-filter:hover {
+.search-btn-filter:hover,
+.search-btn:hover {
   cursor: pointer;
   background: #A09D00;
   border: 0.07rem solid #A09D00;
@@ -281,6 +291,9 @@ body {
   grid-gap: 5px;
   padding: 5px;
   background: #A09D00;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  overflow: scroll;
 }
 
 .availible-room-heading {
@@ -324,6 +337,156 @@ body {
   border: 0.07rem solid #34526E;
 }
 
+.dashboard-section-manager {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.manager-heading-wrapper {
+  width: 60%;
+  margin-top: 150px;
+  padding: 10px 0px 10px 0px;
+  background: #A09D00;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.heading-two-stats {
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+  background: #34526E;
+  color: #F1EFE9;
+}
+
+.daily-stats-section {
+  width: 60%;
+  background: #F1EFE9;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.stats-info {
+  padding: 10px;
+}
+
+.customer-search-heading {
+  text-align: center;
+  width: 60%;
+  margin-top: 150px;
+  background: #A09D00;
+  padding: 20px 0px 10px 5px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.search-customer-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  background: #F1EFE9;
+  padding: 20px 0px 10px 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.search-input {
+  margin-bottom: 8px;
+  padding: 5px;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+
+.customer-info-heading {
+  text-align: center;
+  width: 60%;
+  margin-top: 150px;
+  margin-bottom: 30px;
+  padding: 20px 0 20px 0;
+  background: #F1EFE9;
+  border-radius: 20px;
+  border-radius: 20px;
+}
+
+.customer-date-wrapper {
+  text-align: center;
+  width: 60%;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #F1EFE9;
+  border-radius: 20px;
+}
+
+.customer-info {
+  padding-bottom: 10px;
+}
+
+.heading-manager-customer {
+  text-align: center;
+  width: 60%;
+  padding: 10px 0px;
+  background-color: #A09D00;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.list-bookings-manager {
+  width: 60%;
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto;
+  background: #F1EFE9;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: scroll;
+}
+
+.make-booking-btn {
+  padding: 8px;
+  background: none;
+  border: 0.07rem solid #232323;
+  border-radius: 20px;
+}
+.make-booking-btn:hover {
+  cursor: pointer;
+  background: #34526E;
+  color: #F1EFE9;
+  border: 0.07rem solid #34526E;
+}
+
+.customer-booking-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  padding-bottom: 10px;
+  border: 0.07rem solid #232323;
+  border-radius: 10px;
+}
+
+.booking-info {
+  padding: 5px;
+}
+
+.book-room-section-manager {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.manager-book-room-heading {
+  text-align: center;
+  margin-top: 20px;
+  width: 100%;
+  padding: 10px 0px;
+  background: #F1EFE9;
+}
+
 .hidden {
   display: none;
   width: 0px;
@@ -339,6 +502,18 @@ body {
   overflow: hidden;
   padding: 0;
   position: absolute;
+}
+
+.suite {
+  background: #95B9B4;
+}
+
+.residential-suite {
+  background: #B36868;
+}
+
+.junior-suite {
+  background: #DEC58C;
 }
 
 /*# sourceMappingURL=style.css.map */
