--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -284,7 +284,7 @@ body {
 }
 
 // DISPLAY AVAILIBLE ROOMS
-.availible-room-section {
+.available-room-section {
     width: 100%;
     height: 100%;
     display: grid;
@@ -297,7 +297,7 @@ body {
     border-bottom-right-radius: $round-corner-small;
 }
 
-.availible-room-heading {
+.available-room-heading {
     width: 100%;
     margin-top: 100px;
     margin-bottom: 0px;
@@ -323,7 +323,7 @@ body {
     padding: 0px 3px 3px 3px;
 }
 
-.no-rooms-availible {
+.no-rooms-available {
     @include flex;
     margin-top: 150px;
     background: $grey-white;
@@ -521,7 +521,7 @@ body {
     margin-bottom: 20px;
 }
 
-.manager-display-availible-rooms {
+.manager-display-available-rooms {
     width: 75%;
 }
 
