--- a/src/css/style.css
+++ b/src/css/style.css
@@ -187,7 +187,8 @@ body {
 
 .room-display-wrapper,
 .confirm-booking-customer,
-.status-msg-wrapper {
+.status-msg-wrapper,
+.no-customer-found {
   width: 50vw;
   padding: 40px;
   margin-top: 150px;
@@ -412,6 +413,10 @@ body {
 
 .search-btn {
   margin-bottom: 20px;
+}
+
+.no-customer-found {
+  text-align: center;
 }
 
 .customer-info-heading {
