--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -284,10 +284,10 @@ body {
     }
 }
 
-// DISPLAY AVAILIBLE ROOMS
+// DISPLAY AVAILABLE ROOMS
 .available-room-section {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: auto;
