Change highlight color on room types

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -550,15 +550,15 @@ body {
 }
 
 .suite {
-  background: #95B9B4;
+  background: #83cfc5;
 }
 
 .residential-suite {
-  background: #B36868;
+  background: #a2a2a2;
 }
 
 .junior-suite {
-  background: #DEC58C;
+  background: #e0bd6c;
 }
 
 /*# sourceMappingURL=style.css.map */
